--- a/style.css
+++ b/style.css
@@ -30,63 +30,127 @@
 
   --twitter-btn: #1da1f2;
   --twitter-hover-btn: #0d8ddb;
-  --icon-clr: #7980C9;
-  --icon-hover-clr: #606BE6;
+  --icon-clr: #7980c9;
+  --icon-hover-clr: #606be6;
 }
 
 body {
   background: var(--main-clr);
   padding-bottom: 60px;
   max-width: 400px;
-  margin: auto;
+  padding: 0 20px;
 }
-/**** header ****/
+
+/**** index page style ****/
+
+.index_page_style {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #007bff;
+  color: white;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+#splash-screen {
+  text-align: center;
+  animation: fadeIn 1s ease-in-out;
+}
+
+#splash-title {
+  font-size: 5rem;
+  margin-bottom: 10px;
+}
+
+#splash-text {
+  font-size: 1.5rem;
+}
+
+#dote1 {
+  animation: fadeInOut 3s infinite;
+}
+#dote2 {
+  animation: fadeInOut 3.2s infinite;
+}
+#dote3 {
+  animation: fadeInOut 3.4s infinite;
+}
+#dote4 {
+  animation: fadeInOut 3.8s infinite;
+}
+#dote5 {
+  animation: fadeInOut 4s infinite;
+}
+#dote6 {
+  animation: fadeInOut 4.2s infinite;
+}
+#dote7 {
+  animation: fadeInOut 4.4s infinite;
+}
+#dote8 {
+  animation: fadeInOut 4.8s infinite;
+}
+
+@keyframes fadeInOut {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+/**** choicepage ****/
+/* header */
 header {
   display: flex;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 10px 0;
   align-items: center;
 }
 header a {
   color: var(--twitter-hover-btn);
-font-size: 1.5rem;
+  font-size: 1.5rem;
+  text-decoration: none;
 }
-.hidden_btn{
-  visibility: hidden;
+header h1 {
+  font-size: 1.8rem;
+
 }
-.E_span {
+header h1 .E_span {
   color: red;
-}#00FF3F
-.Q_span {
+}
+header h1 .Q_span {
   color: var(--twitter-hover-btn);
 }
-/****/
-.setting_main_section {
-  margin-top: 30px;
-  display: flex ;
-  flex-direction:column ;
-  gap: 0;
+/* choicepage_main_section */
+main h2{
+  font-size: 1.2rem;
+  color: var(--first-title-clr);
+  margin: 10px 0;
 }
+/***** settings page *****/
+
 .setting_main_section .setting_btn {
   background: var(--main-color);
-font-size: 1rem;
-font-weight: 500;
-padding-left: 20px;
-text-align: left;
-width: 100%;
-height: 50px;
-border: none;
-color: var(--second-title-clr);
-background: var(--twitter-btn);
-cursor: pointer;
-border-radius: 0;
+  font-size: 1rem;
+  font-weight: 500;
+  padding-left: 20px;
+  text-align: left;
+  width: 100%;
+  height: 50px;
+  border: none;
+  color: var(--second-title-clr);
+  background: var(--twitter-btn);
+  cursor: pointer;
+  border-radius: 0;
 }
-h2 {
-  text-align: center;
-  margin-top: 20px;
-  padding: 15px;
+.edit_btn {
+  margin: 20px 0;
 }
-
+/**** login & sing up & edit *****/
 .userForm {
   padding: 20px;
 }
@@ -239,32 +303,29 @@ button:hover {
 .educationForm {
   padding: 5px 20px;
 }
-
-
+/***** question page *****/
 .question-container {
-  max-width: 400px;
-  margin: auto;
   padding: 20px;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .options label {
   display: flex;
   position: relative;
-  padding: 5px;
+  padding: 15px;
   cursor: pointer;
-  border: 2px solid ;
+  border: 1px solid;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   justify-content: space-around;
   font-size: 1rem;
 }
-.options label:active{
+.options label:active {
   background-color: #ccc;
 }
-.options label h2{
+.options label h2 {
   margin: 0;
 }
 .radio_btn {
@@ -275,13 +336,15 @@ button:hover {
 }
 .correct {
   color: green;
-  border:2px solid green;
+  border: 1px solid green;
+  background-color: rgb(0, 128, 0 , 0.2);
   /* لون النص أخضر للإجابة الصحيحة */
 }
 
 .wrong {
   color: red;
-  border:2px solid red;
+  border: 1px solid red;
+  background-color: rgb(255, 0, 0 , 0.2);
   /* لون النص أحمر للإجابة الخاطئة */
 }
 
@@ -295,7 +358,6 @@ button:hover {
   padding: 10px;
   border: 1px solid #ccc;
   background: #f9f9f9;
-  
 }
 
 .showresult_table {
@@ -307,9 +369,8 @@ button:hover {
   font-size: 1.2rem;
   margin-bottom: 20px;
 }
-.showresult_table th , td {
+.showresult_table th,
+td {
   border: 1px solid black;
   padding: 5px;
 }
-
-
