--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 body {
   background: var(--main-clr);
   padding-bottom: 60px;
-  max-width: 400px;
+  /* max-width: 400px; */
   padding: 0 20px;
 }
 
@@ -118,6 +118,10 @@ header a {
 header h1 {
   font-size: 1.8rem;
 
+}
+/********/
+.textdirection {
+  direction: rtl;
 }
 header h1 .E_span {
   color: red;
@@ -310,7 +314,22 @@ button:hover {
   border-radius: 15px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
+.question_header {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0 10px;
+}
 
+.question_header h1{
+  font-size: 1.6rem;
+  text-align: center;
+  
+}
+.question-container h2 {
+  font-size: 1.5rem;
+  padding: 20px 0;
+  margin-bottom: 20px;
+}
 .options label {
   display: flex;
   position: relative;
