--- a/style.css
+++ b/style.css
@@ -402,8 +402,17 @@ button:hover {
   font-size: 1.2rem;
   margin-bottom: 20px;
 }
-.showresult_table th,
-td {
-  border: 1px solid black;
+table {
+  width: 100%;
+  text-align: center;
+}
+table th{
+  border: 2px solid black;
+  background-color: var(--twitter-hover-btn);
+  padding: 5px;
+}
+table td {
+  border: 2px solid black;
+  background-color: var(--twitter-hover-btn);
   padding: 5px;
 }
